# Obfin

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: pull-request.yaml  test.yml
.husky/: pre-commit
backend/: .env.example  .gitignore  package-lock.json  package.json  server.js
backend/__tests__/: example.test.js  taxEngine.test.js
backend/config/: serviceAccountKey.example.json
backend/tax/: taxEngine.js
backend/tax/data/: federal_2025.preview.json  states_2025.preview.json
backend/utils/: chatUtils.js
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/obfin-frontend/: package-lock.json  package.json
frontend/obfin-frontend/src/: App.js
frontend/obfin-frontend/src/layout/: Layout.jsx
frontend/obfin-frontend/src/pages/: Dashboard.jsx  Login.jsx
frontend/src/: App.js  animation.css
frontend/src/components/: BudgetSection.js  BudgetSection.tsx  Button.js  Button.tsx  HeaderSection.tsx  IncomeSection.js  IncomeSection.tsx  signOut.js
frontend/src/components/settings/: DangerZone.jsx  FinanceSettings.jsx  ProfileSettings.jsx
frontend/src/firebase/: firebase.js
frontend/src/layout/: Layout.jsx
frontend/src/pages/: AIAdvisor.jsx  Analytics.jsx  Dashboard.jsx  FirstTimeUser.js  FirstTimeUser.jsx  FirstTimeUser.tsx  Login.jsx  Settings.jsx  TaxCalculator.jsx  Transactions.jsx
frontend/src/pages/transactions/: AddTransactionModal.jsx  (+3 more)
frontend/src/utils/: taxUtils.js
src/: App.js  App.test.js  main.rs
src/layout/: Layout.jsx
